--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".base.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".base.App">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.SplashActivity"
             android:label="@string/app_name"
@@ -24,14 +24,17 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activity.GuideActivity"
+        <activity
+            android:name=".ui.activity.GuideActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".ui.activity.MainActivity"
+        <activity
+            android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".ui.activity.PublishActivity"
-            android:theme="@style/PublishTransparent"/>
+        <activity
+            android:name=".ui.activity.PublishActivity"
+            android:theme="@style/PublishTransparent" />
 
     </application>
 
