--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.SplashActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Design.Light.NoActionBar">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,6 +34,15 @@
         <activity
             android:name=".ui.activity.PublishActivity"
             android:theme="@style/PublishTransparent" />
+
+        <activity android:name=".ui.activity.LoginActivity"
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".ui.activity.RegisterActivity"
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".ui.activity.VerifyCaptchaActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
